[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/shop_scene.gd" type="Script" id=1]
[ext_resource path="res://images/wb.background.png" type="Texture" id=2]
[ext_resource path="res://objects/background/stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://images/end_island.png" type="Texture" id=4]
[ext_resource path="res://objects/shop_btn.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/wbtopbackground.png" type="Texture" id=6]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://images/left-arrow-4.png" type="Texture" id=8]
[ext_resource path="res://images/coins.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]

resource_name = "show"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("topgui/wbbackground2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=4]

resource_name = "minus"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -353, -59 ), Vector2( -353, -14 ), Vector2( -353, -29 ) ]
}

[node name="shop_scene" type="Node2D"]

script = ExtResource( 1 )

[node name="wb.background" type="Sprite" parent="." index="0"]

position = Vector2( 339.961, 629.524 )
scale = Vector2( 1.11508, 1.11508 )
texture = ExtResource( 2 )

[node name="stars" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -37.5433, -25.7124 )

[node name="anime" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 1 )
blend_times = [  ]

[node name="scroll" type="Sprite" parent="." index="3"]

self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="shop_btn1" parent="scroll" index="0" instance=ExtResource( 5 )]

position = Vector2( 91.8088, 263.937 )

[node name="shop_btn2" parent="scroll" index="1" instance=ExtResource( 5 )]

position = Vector2( 334.507, 264.048 )

[node name="shop_btn3" parent="scroll" index="2" instance=ExtResource( 5 )]

position = Vector2( 91.8088, 563.937 )

[node name="shop_btn5" parent="scroll" index="3" instance=ExtResource( 5 )]

position = Vector2( 91.8088, 863.937 )

[node name="shop_btn7" parent="scroll" index="4" instance=ExtResource( 5 )]

position = Vector2( 91.8088, 1163.94 )

[node name="shop_btn4" parent="scroll" index="5" instance=ExtResource( 5 )]

position = Vector2( 334.507, 564.048 )

[node name="shop_btn6" parent="scroll" index="6" instance=ExtResource( 5 )]

position = Vector2( 334.507, 865.35 )

[node name="shop_btn8" parent="scroll" index="7" instance=ExtResource( 5 )]

position = Vector2( 334.507, 1165.35 )

[node name="topgui" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="wbtopbackground" type="Sprite" parent="topgui" index="0"]

modulate = Color( 1, 1, 1, 0.396392 )
position = Vector2( 319.721, 576.882 )
scale = Vector2( 1.06537, 1.08961 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="Label" type="Label" parent="topgui" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_top = 84.0
margin_right = 554.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Shop"
align = 2
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="back_btn" type="TouchScreenButton" parent="topgui" index="2"]

position = Vector2( 79.624, 80.8304 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="coins" type="Sprite" parent="topgui" index="3"]

position = Vector2( 533.018, 986.898 )
texture = ExtResource( 9 )

[node name="count" type="Label" parent="topgui/coins" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -353.0
margin_top = -31.0
margin_right = -36.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="anime" type="AnimationPlayer" parent="topgui/coins/count" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/minus = SubResource( 4 )
blend_times = [  ]

[node name="wbbackground2" type="Sprite" parent="topgui" index="4"]

visible = false
position = Vector2( 328.665, 689.54 )
scale = Vector2( 1.07461, 1.22218 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = true

[connection signal="released" from="topgui/back_btn" to="." method="_on_back_btn_released"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


